--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.84.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "posthog-js": "^1.298.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
