--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@
 
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# PostHog Analytics
+VITE_POSTHOG_KEY=your-posthog-key-here
+VITE_POSTHOG_HOST=https://us.i.posthog.com
